--- a/catalog.html
+++ b/catalog.html
@@ -48,7 +48,7 @@
 
   <main class="main-catalog">
     <header class="catalog-header">
-      <h1 class="catalog-header-title">Гостиницы Седоны</h1>
+      <h1 class="catalog-title">Гостиницы Седоны</h1>
       <ul class="breadcrumbs">
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-link" href="index.html">
@@ -116,8 +116,8 @@
             </label>
         </fieldset>
 
-        <button class="button" type="submit">Применить</button>
-        <button class="button" type="reset">Сбросить</button>
+        <button class="button button-blue" type="submit">Применить</button>
+        <button class="button button-transparent" type="reset">Сбросить</button>
       </form>
     </section>
 
@@ -149,8 +149,8 @@
           </a>
           <p class="hotel-type">Гостиница</p>
           <p class="hotel-price">От 4000 ₽</p>
-          <a class="hotel-button button" href="#">подробнее</a>
-          <button class="hotel-button button" type="button">в избранное</button>
+          <a class="hotel-button button button-brown" href="#">подробнее</a>
+          <button class="hotel-button button button-blue" type="button">в избранное</button>
           <p class="hotel-stars hotel-stars-4">
             <span class="visually-hidden">4 звезды из 5.</span>
           </p>
@@ -164,8 +164,8 @@
           </a>
           <p class="hotel-type">Гостиница</p>
           <p class="hotel-price">От 5000 ₽</p>
-          <a class="hotel-button button" href="#">подробнее</a>
-          <a class="hotel-button button" href="#">в избранном</a>
+          <a class="hotel-button button button-brown" href="#">подробнее</a>
+          <a class="hotel-button button button-green" href="#">в избранном</a>
           <p class="hotel-stars hotel-stars-4">
             <span class="visually-hidden">4 звезды из 5.</span>
           </p>
@@ -179,8 +179,8 @@
           </a>
           <p class="hotel-type">Гостиница</p>
           <p class="hotel-price">От 2500 ₽</p>
-          <a class="hotel-button button" href="#">подробнее</a>
-          <button class="hotel-button button" type="button">в избранное</button>
+          <a class="hotel-button button button-brown" href="#">подробнее</a>
+          <button class="hotel-button button button-blue" type="button">в избранное</button>
           <p class="hotel-stars hotel-stars-3">
             <span class="visually-hidden">3 звезды из 5.</span>
           </p>
@@ -194,8 +194,8 @@
           </a>
           <p class="hotel-type">Гостиница</p>
           <p class="hotel-price">От 1500 ₽</p>
-          <a class="hotel-button button" href="#">подробнее</a>
-          <button class="hotel-button button" type="button">в избранное</button>
+          <a class="hotel-button button button-brown" href="#">подробнее</a>
+          <button class="hotel-button button button-blue" type="button">в избранное</button>
           <p class="hotel-stars hotel-stars-2">
             <span class="visually-hidden">2 звезды из 5.</span>
           </p>
@@ -217,7 +217,7 @@
           <a class="pagination-link" href="#">4</a>
         </li>
         <li class="pagination-item">
-          <a class="pagination-link" href="#">...</a>
+          <a class="pagination-link dots" href="#">...</a>
         </li>
         <li class="pagination-item">
           <a class="pagination-link" href="#">10</a>
@@ -225,8 +225,8 @@
       </ul>
     </section>
 
-    <section class="subscription">
-      <h2 class="subscription-subtitle subtitle">Подпишитесь на рассылку</h2>
+    <section class="catalog-subscription">
+      <h2 class="catalog-subscription-subtitle subtitle">Подпишитесь на рассылку</h2>
       <p class="subscription-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
       <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
         <input class="subscription-email" type="email" name="subscription-email" id="subscription-email"
