--- a/catalog.html
+++ b/catalog.html
@@ -118,32 +118,39 @@
                 </label>
             </fieldset>
 
-            <button class="button button-dark" type="submit">Применить</button>
-            <button class="button button-transparent" type="reset">Сбросить</button>
+            <div class="button-wrapper">
+              <button class="button button-dark" type="submit">Применить</button>
+              <button class="button button-transparent" type="reset">Сбросить</button>
+            </div>
+
           </form>
         </section>
       </div>
 
 
       <section class="hotels" data-test="catalog">
-        <h2 class="visually-hidden">Сортировка результата по фильтрам.</h2>
-        <p class="hotels-title title">Найдено гостиниц: 38</p>
+        <div class="sort-wrapper">
+          <h2 class="visually-hidden">Сортировка результата по фильтрам.</h2>
+          <p class="hotels-title title">Найдено гостиниц: 38</p>
 
-        <select class="select-control" aria-label="Сортировка">
-          <option value="cheap">Сначала дешевые</option>
-          <option value="expensive">Сначала дорогие</option>
-          <option value="popular">Сначала популярные</option>
-        </select>
+          <select class="select-control" aria-label="Сортировка">
+            <option value="cheap">Сначала дешевые</option>
+            <option value="expensive">Сначала дорогие</option>
+            <option value="popular">Сначала популярные</option>
+          </select>
 
-        <a class="hotels-view hotels-view-current" href="#">
-          <span class="visually-hidden">Показать плиткой.</span>
-        </a>
-        <a class="hotels-view" href="#">
-          <span class="visually-hidden">Показать крупными карточками (слайдшоу).</span>
-        </a>
-        <a class="hotels-view" href="#">
-          <span class="visually-hidden">Показать списком.</span>
-        </a>
+          <div class="hotels-view-buttons">
+            <a class="hotels-view hotels-view-current" href="#">
+              <span class="visually-hidden">Показать плиткой.</span>
+            </a>
+            <a class="hotels-view" href="#">
+              <span class="visually-hidden">Показать крупными карточками (слайдшоу).</span>
+            </a>
+            <a class="hotels-view" href="#">
+              <span class="visually-hidden">Показать списком.</span>
+            </a>
+          </div>
+        </div>
 
         <ul class="hotels-list hotel">
 
