--- a/5/catalog.html
+++ b/5/catalog.html
@@ -119,32 +119,39 @@
                 </label>
             </fieldset>
 
-            <button class="button button-dark" type="submit">Применить</button>
-            <button class="button button-transparent" type="reset">Сбросить</button>
+            <div class="button-wrapper">
+              <button class="button button-dark" type="submit">Применить</button>
+              <button class="button button-transparent" type="reset">Сбросить</button>
+            </div>
+
           </form>
         </section>
       </div>
 
 
       <section class="hotels" data-test="catalog">
-        <h2 class="visually-hidden">Сортировка результата по фильтрам.</h2>
-        <p class="hotels-title title">Найдено гостиниц: 38</p>
+        <div class="sort-wrapper">
+          <h2 class="visually-hidden">Сортировка результата по фильтрам.</h2>
+          <p class="hotels-title title">Найдено гостиниц: 38</p>
 
-        <select class="select-control" aria-label="Сортировка">
-          <option value="cheap">Сначала дешевые</option>
-          <option value="expensive">Сначала дорогие</option>
-          <option value="popular">Сначала популярные</option>
-        </select>
+          <select class="select-control" aria-label="Сортировка">
+            <option value="cheap">Сначала дешевые</option>
+            <option value="expensive">Сначала дорогие</option>
+            <option value="popular">Сначала популярные</option>
+          </select>
 
-        <a class="hotels-view hotels-view-current" href="#">
-          <span class="visually-hidden">Показать плиткой.</span>
-        </a>
-        <a class="hotels-view" href="#">
-          <span class="visually-hidden">Показать крупными карточками (слайдшоу).</span>
-        </a>
-        <a class="hotels-view" href="#">
-          <span class="visually-hidden">Показать списком.</span>
-        </a>
+          <div class="hotels-view-buttons">
+            <a class="hotels-view hotels-view-current" href="#">
+              <span class="visually-hidden">Показать плиткой.</span>
+            </a>
+            <a class="hotels-view" href="#">
+              <span class="visually-hidden">Показать крупными карточками (слайдшоу).</span>
+            </a>
+            <a class="hotels-view" href="#">
+              <span class="visually-hidden">Показать списком.</span>
+            </a>
+          </div>
+        </div>
 
         <ul class="hotels-list hotel">
 
@@ -221,7 +228,7 @@
             <p class="hotel-rating">Рейтинг: 6,9</p>
           </li>
 
-          <li class="hotels-card">
+          <li class="hotel-card">
             <a class="hotel-link" href="#">
               <img class="hotel-image" src="images/catalog/hotel-4.jpg" alt="Вид из гостиницы GreenTree Inn.">
               <h3 class="hotel-title">GreenTree Inn</h3>
@@ -265,7 +272,7 @@
         <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
           <input class="subscription-email" type="email" name="subscription-email" id="subscription-email"
             placeholder="Ваш e-mail" required>
-          <button class="subscription-button button" type="submit">Подписаться</button>
+          <button class="subscription-button button button-dark" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
