--- a/5/index.html
+++ b/5/index.html
@@ -14,7 +14,7 @@
       <nav class="navigation">
 
         <a class="navigation-logo" href="index.html" aria-current="page">
-          <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седоны.">
+          <img class="logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седоны.">
         </a>
 
         <ul class="navigation-list">
@@ -55,12 +55,15 @@
       </section>
 
       <section class="reasons" data-test="advantages">
-        <h2 class="reasons-title title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
+        <h2 class="reasons-title title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p class="reasons-text text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="reasons-list reason">
           <li class="reason-item dark-background">
-            <h3 class="reason-name">Настоящий городок</h3>
-            <p class="reason-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <div class="reason-item-wrapper">
+              <h3 class="reason-name">Настоящий городок</h3>
+              <p class="reason-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            </div>
+
             <img class="reason-img" src="images/reasons-1.jpg" width="800" height="385" alt="Вид на двухэтажный дом в Седоне.">
           </li>
           <li class="reason-item light-background">
@@ -76,9 +79,11 @@
             <p class="reason-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
           <li class="reason-item dark-background">
-            <h3 class="reason-name">Там есть мост дьявола</h3>
-            <p class="reason-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             <img class="reason-img" src="images/reasons-2.jpg" width="800" height="385" alt="Мост Дьявола.">
+            <div class="reason-item-wrapper">
+              <h3 class="reason-name">Там есть<br>мост дьявола</h3>
+              <p class="reason-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            </div>
           </li>
         </ul>
       </section>
@@ -89,15 +94,15 @@
         <ul class="recommendation-list">
           <li class="recommendation-item light-background">
             <h3 class="recommendation-name">Жильё</h3>
-            <p class="recommendation-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            <p class="recommendation-description">Рекомендуем пожить<br>в настоящем мотеле,<br>всё как в кино!</p>
           </li>
           <li class="recommendation-item">
             <h3 class="recommendation-name">Еда</h3>
-            <p class="recommendation-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            <p class="recommendation-description">Всегда заказывайте<br> топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li class="recommendation-item light-background">
             <h3 class="recommendation-name">Сувениры</h3>
-            <p class="recommendation-description">Не только китайского, но и настоящего местного производства!</p>
+            <p class="recommendation-description">Не только китайского,<br>но и настоящего местного производства!</p>
           </li>
         </ul>
       </section>
@@ -114,7 +119,7 @@
         <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
           <input class="subscription-email" type="email" name="subscription-email" id="subscription-email"
             placeholder="Ваш e-mail" required>
-          <button class="subscription-button button button-blue" type="submit">Подписаться</button>
+          <button class="subscription-button button button-dark" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
