--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <section class="search" data-test="search">
         <h2 class="visually-hidden">Поиск гостиницы.</h2>
         <p class="search-title title">Заинтересовались?</p>
-        <p class="search-text text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <p class="search-text text">Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <button class="search-button button" type="button">ПОИСК ГОСТИНИЦЫ В седоне</button>
       </section>
 
