--- a/catalog.html
+++ b/catalog.html
@@ -160,8 +160,6 @@
 
         <ul class="hotels-list hotel">
 
-          <!-- Тестовая карточка с обертками
-
           <li class="hotel-card">
             <a class="hotel-link" href="#">
               <img class="hotel-image" src="images/catalog/hotel-1.jpg" alt="Вид из гостиницы Amara Resort & Spa.">
@@ -185,22 +183,6 @@
               </p>
               <p class="hotel-rating">Рейтинг: 8,5</p>
             </div>
-
-          </li> -->
-
-          <li class="hotel-card">
-            <a class="hotel-link" href="#">
-              <img class="hotel-image" src="images/catalog/hotel-1.jpg" alt="Вид из гостиницы Amara Resort & Spa.">
-              <h3 class="hotel-title">Amara Resort & Spa</h3>
-            </a>
-            <p class="hotel-type">Гостиница</p>
-            <p class="hotel-price">От 4000 ₽</p>
-            <a class="hotel-button button" href="#">подробнее</a>
-            <button class="hotel-button button button-dark" type="button">в избранное</button>
-            <p class="hotel-stars hotel-stars-4">
-              <span class="visually-hidden">4 звезды из 5.</span>
-            </p>
-            <p class="hotel-rating">Рейтинг: 8,5</p>
           </li>
 
           <li class="hotel-card">
@@ -208,14 +190,23 @@
               <img class="hotel-image" src="images/catalog/hotel-2.jpg" alt="Вид из гостиницы Villas at Poco Diablo.">
               <h3 class="hotel-title">Villas at Poco Diablo</h3>
             </a>
-            <p class="hotel-type">Гостиница</p>
-            <p class="hotel-price">От 5000 ₽</p>
-            <a class="hotel-button button" href="#">подробнее</a>
+
+            <div class="hotel-wrapper">
+              <p class="hotel-type">Гостиница</p>
+              <p class="hotel-price">От 5000 ₽</p>
+            </div>
+
+            <div class="hotel-wrapper">
+              <a class="hotel-button button" href="#">подробнее</a>
             <a class="hotel-button button button-favorite" href="#">в избранном</a>
-            <p class="hotel-stars hotel-stars-4">
-              <span class="visually-hidden">4 звезды из 5.</span>
-            </p>
-            <p class="hotel-rating">Рейтинг: 9,2</p>
+            </div>
+
+            <div class="hotel-wrapper">
+              <p class="hotel-stars hotel-stars-4">
+                <span class="visually-hidden">4 звезды из 5.</span>
+              </p>
+              <p class="hotel-rating">Рейтинг: 9,2</p>
+            </div>
           </li>
 
           <li class="hotel-card">
@@ -223,14 +214,24 @@
               <img class="hotel-image" src="images/catalog/hotel-3.jpg" alt="Вид из гостиницы Desert Quail Inn.">
               <h3 class="hotel-title">Desert Quail Inn</h3>
             </a>
-            <p class="hotel-type">Гостиница</p>
-            <p class="hotel-price">От 2500 ₽</p>
-            <a class="hotel-button button" href="#">подробнее</a>
+
+            <div class="hotel-wrapper">
+              <p class="hotel-type">Гостиница</p>
+              <p class="hotel-price">От 2500 ₽</p>
+            </div>
+
+            <div class="hotel-wrapper">
+              <a class="hotel-button button" href="#">подробнее</a>
             <button class="hotel-button button button-dark" type="button">в избранное</button>
-            <p class="hotel-stars hotel-stars-3">
-              <span class="visually-hidden">3 звезды из 5.</span>
-            </p>
-            <p class="hotel-rating">Рейтинг: 6,9</p>
+            </div>
+
+
+            <div class="hotel-wrapper">
+              <p class="hotel-stars hotel-stars-3">
+                <span class="visually-hidden">3 звезды из 5.</span>
+              </p>
+              <p class="hotel-rating">Рейтинг: 6,9</p>
+            </div>
           </li>
 
           <li class="hotel-card">
@@ -238,14 +239,24 @@
               <img class="hotel-image" src="images/catalog/hotel-4.jpg" alt="Вид из гостиницы GreenTree Inn.">
               <h3 class="hotel-title">GreenTree Inn</h3>
             </a>
-            <p class="hotel-type">Гостиница</p>
-            <p class="hotel-price">От 1500 ₽</p>
-            <a class="hotel-button button" href="#">подробнее</a>
+
+            <div class="hotel-wrapper">
+              <p class="hotel-type">Гостиница</p>
+              <p class="hotel-price">От 1500 ₽</p>
+            </div>
+
+            <div class="hotel-wrapper">
+              <a class="hotel-button button" href="#">подробнее</a>
             <button class="hotel-button button button-dark" type="button">в избранное</button>
-            <p class="hotel-stars hotel-stars-2">
-              <span class="visually-hidden">2 звезды из 5.</span>
-            </p>
-            <p class="hotel-rating">Рейтинг: 5,0</p>
+            </div>
+
+
+            <div class="hotel-wrapper">
+              <p class="hotel-stars hotel-stars-2">
+                <span class="visually-hidden">2 звезды из 5.</span>
+              </p>
+              <p class="hotel-rating">Рейтинг: 5,0</p>
+            </div>
           </li>
         </ul>
 
