--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
           <li class="navigation-item">
             <a class="navigation-link user-favorite" href="#">
               <span class="visually-hidden">Избранное</span>
-              <!-- <span class="user-favorite-count">12</span> -->
+              <!-- Временно скрытый счетчик избранного, до стилизации)
+
+                <span class="user-favorite-count">12</span>
+              -->
             </a>
           </li>
           <li class="navigation-item">
