--- a/5/catalog.html
+++ b/5/catalog.html
@@ -12,7 +12,6 @@
   <div class="page-wrapper">
     <header class="page-header" data-test="header">
       <nav class="navigation">
-
         <a class="navigation-logo" href="index.html">
           <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седоны.">
         </a>
@@ -38,7 +37,10 @@
           <li class="navigation-item">
             <a class="navigation-link user-favorite" href="#">
               <span class="visually-hidden">Избранное</span>
-              <span class="user-favorite-count">12</span>
+              <!-- Временно скрытый счетчик избранного, до стилизации)
+
+                <span class="user-favorite-count">12</span>
+              -->
             </a>
           </li>
           <li class="navigation-item">
@@ -122,14 +124,12 @@
                 </label>
               </div>
               <input class="range" type="range" id="range-price" name="price" min="0" max="15000">
-
             </fieldset>
 
             <div class="button-wrapper">
               <button class="button button-dark button-filter" type="submit">Применить</button>
               <button class="button button-transparent button-filter" type="reset">Сбросить</button>
             </div>
-
           </form>
         </section>
       </div>
@@ -160,7 +160,6 @@
         </div>
 
         <ul class="hotels-list hotel">
-
           <li class="hotel-card">
             <a class="hotel-link" href="#">
               <img class="hotel-image" src="images/catalog/hotel-1.jpg" alt="Вид из гостиницы Amara Resort & Spa.">
