--- a/5/index.html
+++ b/5/index.html
@@ -12,7 +12,6 @@
   <div class="page-wrapper">
     <header class="page-header" data-test="header">
       <nav class="navigation">
-
         <a class="navigation-logo" href="index.html" aria-current="page">
           <img class="logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седоны.">
         </a>
@@ -38,7 +37,10 @@
           <li class="navigation-item">
             <a class="navigation-link user-favorite" href="#">
               <span class="visually-hidden">Избранное</span>
-              <span class="user-favorite-count">12</span>
+              <!-- Временно скрытый счетчик избранного, до стилизации)
+
+                <span class="user-favorite-count">12</span>
+              -->
             </a>
           </li>
           <li class="navigation-item">
@@ -58,13 +60,14 @@
         <h2 class="reasons-title title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p class="reasons-text text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="reasons-list reason">
-          <li class="reason-item dark-background">
+          <li class="reason-item reason-item-big">
             <div class="reason-item-wrapper">
               <h3 class="reason-name">Настоящий городок</h3>
               <p class="reason-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
-
-            <img class="reason-img" src="images/reasons-1.jpg" width="800" height="385" alt="Вид на двухэтажный дом в Седоне.">
+            <div class="reason-img-wrapper">
+              <img class="reason-img" src="images/reasons-1.jpg" width="800" height="385" alt="Вид на двухэтажный дом в Седоне.">
+            </div>
           </li>
           <li class="reason-item light-background">
             <h3 class="reason-name">Небольшая площадь</h3>
@@ -78,8 +81,10 @@
             <h3 class="reason-name">Мало туристов</h3>
             <p class="reason-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
-          <li class="reason-item dark-background">
-            <img class="reason-img" src="images/reasons-2.jpg" width="800" height="385" alt="Мост Дьявола.">
+          <li class="reason-item reason-item-big">
+            <div class="reason-img-wrapper">
+              <img class="reason-img" src="images/reasons-2.jpg" width="800" height="385" alt="Мост Дьявола.">
+            </div>
             <div class="reason-item-wrapper">
               <h3 class="reason-name">Там есть <br>мост дьявола</h3>
               <p class="reason-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -94,7 +99,7 @@
         <ul class="recommendation-list">
           <li class="recommendation-item light-background">
             <h3 class="recommendation-name">Жильё</h3>
-            <p class="recommendation-description">Рекомендуем пожить <br>в настоящем мотеле, <br>всё как в кино!</p>
+            <p class="recommendation-description">Рекомендуем пожить&nbspв настоящем мотеле, <br>всё как в кино!</p>
           </li>
           <li class="recommendation-item">
             <h3 class="recommendation-name">Еда</h3>
@@ -102,7 +107,8 @@
           </li>
           <li class="recommendation-item light-background">
             <h3 class="recommendation-name">Сувениры</h3>
-            <p class="recommendation-description">Не только китайского, <br>но и настоящего местного производства!</p>
+            <!-- Норм ли что 2 неразрывных пробела или лучше 1 br заменить? -->
+            <p class="recommendation-description">Не только китайского, но&nbspи&nbspнастоящего местного производства!</p>
           </li>
         </ul>
       </section>
