--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
     <header class="page-header" data-test="header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html">
-          <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седоны.">
+          <img class="logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седоны.">
         </a>
 
         <ul class="navigation-list">
@@ -36,10 +36,7 @@
           <li class="navigation-item">
             <a class="navigation-link user-favorite" href="#">
               <span class="visually-hidden">Избранное</span>
-              <!-- Временно скрытый счетчик избранного, до стилизации)
-
-                <span class="user-favorite-count">12</span>
-              -->
+              <span class="user-favorite-count">12</span>
             </a>
           </li>
           <li class="navigation-item">
@@ -94,7 +91,7 @@
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="radio" name="housing-group" value="hotel"> Гостиница
+                    <input class="control-input" type="radio" name="housing-group" value="hotel" checked> Гостиница
                   </label>
                 </li>
                 <li class="catalog-filter-item">
@@ -104,7 +101,7 @@
                 </li>
                 <li class="catalog-filter-item">
                   <label class="control">
-                    <input class="control-input" type="radio" name="housing-group" value="apartments" checked>Апартаменты
+                    <input class="control-input" type="radio" name="housing-group" value="apartments">Апартаменты
                   </label>
                 </li>
               </ul>
@@ -115,14 +112,21 @@
               <div class="input-wrapper">
                 <label class="catalog-filter-label">
                   <input class="catalog-filter-input min-price" type="number" name="min-price" value="0">
-                  <!-- <span>от</span> -->
+                  <span>от</span>
                 </label>
                 <label class="catalog-filter-label">
                   <input class="catalog-filter-input max-price" type="number" name="max-price" value="9000">
-                  <!-- <span>до</span> -->
+                  <span>до</span>
                 </label>
               </div>
-              <input class="range" type="range" id="range-price" name="price" min="0" max="15000">
+              <div class="range-wrapper">
+                <button class="range-button" type="button">
+                  <span class="visually-hidden">Выбрать минимальную цену.</span>
+                </button>
+                <button class="range-button" type="button">
+                  <span class="visually-hidden">Выбрать максимальную цену.</span>
+                </button>
+              </div>
             </fieldset>
 
             <div class="button-wrapper">
@@ -133,11 +137,10 @@
         </section>
       </div>
 
-
       <section class="hotels" data-test="catalog">
         <div class="sort-wrapper">
           <h2 class="visually-hidden">Сортировка результата по фильтрам.</h2>
-          <p class="hotels-title title">Найдено гостиниц: 38</p>
+          <p class="hotels-title title">Найдено гостиниц: <span>38</span></p>
 
           <select class="select-control" aria-label="Сортировка">
             <option value="cheap">Сначала дешевые</option>
