--- a/catalog.html
+++ b/catalog.html
@@ -165,6 +165,29 @@
           <li class="hotel-card">
             <a class="hotel-link" href="#">
               <img class="hotel-image" src="images/catalog/hotel-1.jpg" alt="Вид из гостиницы Amara Resort & Spa." width="300" height="212">
+            </a>
+            <a class="hotel-link" href="#">
+              <h3 class="hotel-title">Amara Resort & Spa</h3>
+            </a>
+
+
+              <p class="hotel-type">Гостиница</p>
+              <p class="hotel-price">От 4000 ₽</p>
+
+
+              <a class="hotel-button button" href="#">подробнее</a>
+              <button class="hotel-button button button-dark" type="button">в избранное</button>
+
+
+              <p class="hotel-stars hotel-stars-4">
+                <span class="visually-hidden">4 звезды из 5.</span>
+              </p>
+              <p class="hotel-rating">Рейтинг: 8,5</p>
+          </li>
+
+          <li class="hotel-card">
+            <a class="hotel-link" href="#">
+              <img class="hotel-image" src="images/catalog/hotel-1.jpg" alt="Вид из гостиницы Amara Resort & Spa." width="300" height="212">
               <h3 class="hotel-title">Amara Resort & Spa</h3>
             </a>
 
